<resources>
    <string name="app_name">SyncMusic</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="waka_waka">waka waka</string>
    <string name="post_malone">Post Malone</string>
    <string name="imagee">imagee</string>
    <string name="_0_00">0:00</string>
    <string name="_3_45">3:45</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
</resources>