<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_gradient">

    <!-- Song Artwork -->
    <ImageView
        android:id="@+id/imgArtwork"
        android:layout_marginTop="16dp"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:contentDescription="@string/imagee"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtSongTitle"
        android:background="@color/white" />

    <!-- Song Title -->
    <TextView
        android:id="@+id/txtSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waka_waka"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgArtwork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Artist Name -->
    <TextView
        android:id="@+id/txtArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_malone"
        android:textColor="#E0E0E0"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtSongTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp" />

    <!-- SeekBar -->
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:thumbTint="#FFFFFF"
        android:progressTint="#1DB954"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@id/txtArtist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp" />


    <!-- Current & Total Time -->
    <LinearLayout
        android:id="@+id/layoutTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="24dp"
        >
        <TextView
            android:id="@+id/txtCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:textColor="#D3D3D3"
            android:textSize="12sp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/txtTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_45"
            android:textColor="#D3D3D3"
            android:textSize="12sp"
            android:layout_weight="0"/>
    </LinearLayout>

    <!-- Controls Layout -->
    <LinearLayout
        android:id="@+id/layoutControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layoutTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp"
        android:padding="16dp">

        <!-- Previous Button -->
        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_prev"
            android:contentDescription="Previous" />

        <!-- Play/Pause Button -->
        <ImageButton
            android:id="@+id/btnPlayPause"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play"
            android:contentDescription="Play/Pause"
            android:padding="8dp" />

        <!-- Next Button -->
        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next"
            android:contentDescription="Next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
